# nexus

./: .gitignore  README.md
nexus-code/: .gitignore
nexus-code/daemon/: pyproject.toml  requirements.txt  sessions.sqlite
nexus-code/daemon/app/: __init__.py  config.py  main.py
nexus-code/daemon/app/middleware/: __init__.py  auth.py
nexus-code/daemon/app/models/: __init__.py  context.py  request.py  response.py
nexus-code/daemon/app/routes/: chat.py  health.py  models.py
nexus-code/daemon/app/services/: __init__.py  cache.py  compressor.py  context_optimizer.py  edit_formatter.py  embedding.py  guard.py  intent_router.py  memory_graph.py  prompt_assembler.py  repo_mapper.py  response_processor.py  router.py  session.py  summary_updater.py  terminal.py
nexus-code/daemon/config/: daemon_config.yaml  pricing.json  system_prompt.yaml  tools.yaml
nexus-code/daemon/tests/: test_cache_correctness.py  test_context_optimizer.py  test_full_pipeline.py  test_guard.py  test_intent_router.py  test_lifecycle.py  test_repo_mapper.py  test_router_cost.py  test_terminal_filter.py
nexus-code/extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
nexus-code/extension/src/: extension.ts
nexus-code/extension/src/services/: ContextAggregator.ts  DaemonLifecycle.ts  DiffContentProvider.ts  ExtensionConfig.ts  KeyVault.ts  PayloadDispatcher.ts  ToolExecutor.ts  ToolLoopOrchestrator.ts  WebviewProvider.ts
nexus-code/extension/src/types/: contracts.ts
nexus-code/shared/: nexus_schema.json
(+2 files in other folders)
